--- a/scloud/src/main/resources/application-peer2.properties
+++ b/scloud/src/main/resources/application-peer2.properties
@@ -1,4 +1,6 @@
 # Important! Env Only
+eureka.instance.hostname=peer2
+eureka.client.serviceUrl.defaultZone=http://peer1:${server.port}/eureka/
 
 # tomcat config
 server.tomcat.basedir=tomcat
