--- a/scloud/src/main/resources/application.properties
+++ b/scloud/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=eureka-server
 server.port=8085
 
 # Eureka config
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # tomcat config
 server.tomcat.basedir=tomcat
