Dev:add configuration for multi eureka server

--- a/sclouda/src/main/resources/application.properties
+++ b/sclouda/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=compute-service
 grpc.port=6565
 
 # Eureka config
-eureka.client.serviceUrl.defaultZone=http://13.229.247.31:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
 eureka.instance.nonSecurePort=${grpc.port}
 
 
