--- a/sclouda/build.gradle
+++ b/sclouda/build.gradle
@@ -34,7 +34,7 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     maven {
-        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
+        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
     }
 }
 
