--- a/scloud/build.gradle
+++ b/scloud/build.gradle
@@ -1,6 +1,7 @@
 ext {
     projectName = "scloud"
     projectVerion = "0.0.1-SNAPSHOT"
+    springCloudVersion = "1.3.0.RELEASE"
 }
 
 buildscript {
@@ -13,12 +14,6 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath "io.spring.gradle:dependency-management-plugin:1.0.0.RELEASE"
-    }
-}
-
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.RELEASE'
     }
 }
 
@@ -39,8 +34,8 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     maven {
-//        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
-        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
+        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
+//        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
     }
 }
 
@@ -65,8 +60,8 @@ dependencies {
     runtime("mysql:mysql-connector-java")
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
+    compile("org.springframework.cloud:spring-cloud-starter-eureka:${springCloudVersion}")
+    compile("org.springframework.cloud:spring-cloud-starter-eureka-server:${springCloudVersion}")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
