--- a/scloud/build.gradle
+++ b/scloud/build.gradle
@@ -34,8 +34,8 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     maven {
-        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
-//        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
+//        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
+        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
     }
 }
 
