--- a/scloud/src/main/resources/application-peer1.properties
+++ b/scloud/src/main/resources/application-peer1.properties
@@ -2,6 +2,7 @@
 eureka.instance.hostname=peer1
 eureka.client.serviceUrl.defaultZone=http://peer2:${server.port}/eureka/
 eureka.datacenter=cloud
+eureka.environment=demo
 
 # tomcat config
 server.tomcat.basedir=tomcat
