--- a/sclouda/build.gradle
+++ b/sclouda/build.gradle
@@ -1,7 +1,7 @@
 ext {
     projectName = "sclouda"
     projectVerion = "0.0.1-SNAPSHOT"
-    springCloudVersion = "1.3.0.RELEASE"
+    springCloudVersion = "1.3.2.RELEASE"
 }
 
 buildscript {
@@ -32,10 +32,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+    jcenter()
     mavenCentral()
     maven {
-//        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
-        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
+        url "http://repo.redtea.io:8081/nexus/content/groups/public/"
+//        url "http://repo.redtea.internal:8081/nexus/content/groups/public/"
     }
 }
 
@@ -62,13 +63,14 @@ dependencies {
 
     compile("org.springframework.cloud:spring-cloud-starter-eureka:${springCloudVersion}")
     compile("org.springframework.cloud:spring-cloud-starter-eureka-server:${springCloudVersion}")
-    compile("org.springframework.cloud:spring-cloud-starter-eureka-feign:${springCloudVersion}")
+    compile("org.springframework.cloud:spring-cloud-starter-feign:${springCloudVersion}")
 
     compile('org.lognet:grpc-spring-boot-starter:2.0.5')
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.4.0'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.4.0'
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    compile files('libs/scloudz-0.0.1-SNAPSHOT.jar')
 
 }
 
