--- a/sclouda/src/main/resources/application.properties
+++ b/sclouda/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=compute-service
 grpc.port=6565
 
 # Eureka config
+eureka.instance.nonSecurePort=${grpc.port}
 eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
 
 # tomcat config
