--- a/scloudb/build.gradle
+++ b/scloudb/build.gradle
@@ -69,9 +69,13 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-ribbon:${springCloudVersion}")
     compile("org.springframework.cloud:spring-cloud-starter-hystrix:${springCloudVersion}")
 
-    compile('org.lognet:grpc-spring-boot-starter:2.0.5')
+    compile('org.lognet:grpc-spring-boot-starter:2.1.4')
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.4.0'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.4.0'
+
+    compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.4.2'
+
+    compile files("libs/scloudz-0.0.1-SNAPSHOT.jar")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
