enable netty server

--- a/sclouda/src/main/resources/application.properties
+++ b/sclouda/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=compute-service
 
 # grpc config
 grpc.port=6565
+grpc.enable=true
+#grpc.inProcessServerName=${spring.application.name}
 
 # Eureka config
 eureka.instance.nonSecurePort=${grpc.port}
