--- a/sclouda/src/main/resources/application.properties
+++ b/sclouda/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=compute-service
 # grpc config
 grpc.port=6565
 grpc.enable=true
+grpc.ssl.ca_file=/Users/yoruichi/CA_test/ca.pem
+grpc.ssl.key_file=/Users/yoruichi/CA_test/server.key
 #grpc.inProcessServerName=${spring.application.name}
 
 # Eureka config
