--- a/scloudb/src/main/resources/application.properties
+++ b/scloudb/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=ribbon-consumer
 # eureka config
 eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
 
+grpc.ssl.ca_file=/Users/yoruichi/CA_test/ca.pem
+
 # tomcat config
 server.tomcat.basedir=tomcat
 server.tomcat.accesslog.directory=logs
