--- a/sclouda/src/main/resources/application-online.properties
+++ b/sclouda/src/main/resources/application-online.properties
@@ -13,3 +13,7 @@ server.tomcat.accesslog.suffix=
 spring.messages.basename=i18n/messages
 spring.messages.cache-seconds=3600
 spring.messages.encoding=UTF-8
+
+# grpc config
+grpc.ssl.ca_file=/home/ec2-user/CA_test/ca.pem
+grpc.ssl.key_file=/home/ec2-user/CA_test/server.key
