--- a/sclouda/build.gradle
+++ b/sclouda/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.4.0'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.4.0'
 
+    // https://mvnrepository.com/artifact/io.netty/netty-tcnative-boringssl-static
+    compile group: 'io.netty', name: 'netty-tcnative-boringssl-static', version: '2.0.6.Final'
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
     compile files('libs/scloudz-0.0.1-SNAPSHOT.jar')
 
