--- a/scloudb/build.gradle
+++ b/scloudb/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.4.0'
 
     compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.4.2'
+    // https://mvnrepository.com/artifact/io.netty/netty-tcnative-boringssl-static
+    compile group: 'io.netty', name: 'netty-tcnative-boringssl-static', version: '2.0.6.Final'
 
     compile files("libs/scloudz-0.0.1-SNAPSHOT.jar")
 
