add checker for last server instance status before use channel pool of gRPC

--- a/scloudb/src/main/resources/application.properties
+++ b/scloudb/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=${port:8081}
 spring.application.name=ribbon-consumer
 
 # eureka config
-eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
+#eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://13.229.247.31:8085/eureka/
 
 # tomcat config
 server.tomcat.basedir=tomcat
