add online profile

--- a/scloudb/src/main/resources/application-online.properties
+++ b/scloudb/src/main/resources/application-online.properties
@@ -13,3 +13,6 @@ server.tomcat.accesslog.suffix=
 spring.messages.basename=i18n/messages
 spring.messages.cache-seconds=3600
 spring.messages.encoding=UTF-8
+
+# eureka config
+eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
