--- a/sclouda/src/main/resources/application.properties
+++ b/sclouda/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.messages.encoding=UTF-8
 
 # == Staging Only
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://newton-staging.c8vjxxrqkntk.ap-southeast-1.rds.amazonaws.com:3306/Sclouda?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://newton-staging.c8vjxxrqkntk.ap-southeast-1.rds.amazonaws.com:3306/Newton?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.name=StagingMysql
 spring.datasource.username=newton
 spring.datasource.password=VKFOmfHpaIy8ziKQxnR0EYJbIBly51VO
