add security for eureka server

--- a/scloud/src/main/resources/application-peer2.properties
+++ b/scloud/src/main/resources/application-peer2.properties
@@ -16,3 +16,8 @@ server.tomcat.accesslog.suffix=
 spring.messages.basename=i18n/messages
 spring.messages.cache-seconds=3600
 spring.messages.encoding=UTF-8
+
+# security config
+security.basic.enabled=true
+security.user.name=eureka
+security.user.password=FFA37FA0FFAF4D7096D7A95405AC1E8A
