--- a/scloud/build.gradle
+++ b/scloud/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     runtime("mysql:mysql-connector-java")
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
+    compile 'org.springframework.boot:spring-boot-starter-security'
+
     compile("org.springframework.cloud:spring-cloud-starter-eureka:${springCloudVersion}")
     compile("org.springframework.cloud:spring-cloud-starter-eureka-server:${springCloudVersion}")
     compile("org.springframework.cloud:spring-cloud-starter-hystrix:${springCloudVersion}")
