add security config for eureka client application

--- a/scloud/src/main/resources/application-peer1.properties
+++ b/scloud/src/main/resources/application-peer1.properties
@@ -1,6 +1,6 @@
 # Important! Env Only
 eureka.instance.hostname=peer1
-eureka.client.serviceUrl.defaultZone=http://peer2:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer2:${server.port}/eureka/
 eureka.datacenter=cloud
 eureka.environment=demo
 
