--- a/sclouda/src/main/resources/application.properties
+++ b/sclouda/src/main/resources/application.properties
@@ -8,7 +8,7 @@ grpc.enable=true
 
 # Eureka config
 eureka.instance.nonSecurePort=${grpc.port}
-eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer1:8085/eureka/,http://${security.user.name}:${security.user.password}@peer2:8085/eureka/
 
 # tomcat config
 server.tomcat.basedir=tomcat
@@ -49,3 +49,6 @@ liquibase.enabled=false
 
 # custom define config
 sclouda.config.custom.name=CustomDefineResource
+
+security.user.name=eureka
+security.user.password=FFA37FA0FFAF4D7096D7A95405AC1E8A
