--- a/scloudb/src/main/resources/application.properties
+++ b/scloudb/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${port:8081}
 spring.application.name=ribbon-consumer
 
 # eureka config
-eureka.client.serviceUrl.defaultZone=http://13.229.247.31:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer1:8085/eureka/,http://${security.user.name}:${security.user.password}@peer2:8085/eureka/
 
 # tomcat config
 server.tomcat.basedir=tomcat
@@ -60,3 +60,7 @@ liquibase.enabled=false
 
 # custom define config
 scloudb.config.custom.name=CustomDefineResource
+
+security.user.name=eureka 
+security.user.password=FFA37FA0FFAF4D7096D7A95405AC1E8A
+
