--- a/scloud/src/main/resources/application-peer2.properties
+++ b/scloud/src/main/resources/application-peer2.properties
@@ -1,6 +1,6 @@
 # Important! Env Only
 eureka.instance.hostname=peer2
-eureka.client.serviceUrl.defaultZone=http://peer1:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer1:${server.port}/eureka/
 eureka.datacenter=cloud
 
 # tomcat config
