--- a/scloudb/src/main/resources/application-online.properties
+++ b/scloudb/src/main/resources/application-online.properties
@@ -15,4 +15,4 @@ spring.messages.cache-seconds=3600
 spring.messages.encoding=UTF-8
 
 # eureka config
-eureka.client.serviceUrl.defaultZone=http://peer1:8085/eureka/,http://peer2:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer1:8085/eureka/,http://${security.user.name}:${security.user.password}@peer2:8085/eureka/
