--- a/scloud/src/main/resources/application.properties
+++ b/scloud/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8085
 # Eureka config
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.client.healthcheck.enabled=true
 
 # tomcat config
 server.tomcat.basedir=tomcat
