--- a/scloudb/src/main/resources/application-online.properties
+++ b/scloudb/src/main/resources/application-online.properties
@@ -16,3 +16,5 @@ spring.messages.encoding=UTF-8
 
 # eureka config
 eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer1:8085/eureka/,http://${security.user.name}:${security.user.password}@peer2:8085/eureka/
+security.user.name=eureka 
+security.user.password=FFA37FA0FFAF4D7096D7A95405AC1E8A
