--- a/scloudb/src/main/resources/application.properties
+++ b/scloudb/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${port:8081}
 spring.application.name=ribbon-consumer
 
 # eureka config
-eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@peer1:8085/eureka/,http://${security.user.name}:${security.user.password}@peer2:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@52.77.245.124/:8085/eureka/
 
 # tomcat config
 server.tomcat.basedir=tomcat
