modify server name

--- a/scloudb/src/main/resources/application.properties
+++ b/scloudb/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${port:8081}
 spring.application.name=ribbon-consumer
 
 # eureka config
-eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@52.77.245.124/:8085/eureka/
+eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@52.77.245.124:8085/eureka/
 
 # tomcat config
 server.tomcat.basedir=tomcat
@@ -60,7 +60,8 @@ liquibase.enabled=false
 
 # custom define config
 scloudb.config.custom.name=CustomDefineResource
+scloudb.computer.service.name=COMPUTE-SERVICE
 
-security.user.name=eureka 
+security.user.name=eureka
 security.user.password=FFA37FA0FFAF4D7096D7A95405AC1E8A
 
